# ChronicAI

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
src/: temp.py
src/chronic_ai_api/: server.py
src/chronic_ai_app/: boot.py  policy.py
src/chronic_ai_app/agents/: analytics_agent.py  profile_agent.py  recommendation_agent.py
src/chronic_ai_app/app/: reducers.py  state.py
src/chronic_ai_app/config/: allowed_tables.yml
src/chronic_ai_app/ingestion/: data_ingestion.py  embeddings.py
src/chronic_ai_app/nodes/: add_session_uid.py  inject_profile_context.py
src/chronic_ai_app/prompts/: analytics_prompt.py  profile_prompt.py  recommendation_prompt.py
src/chronic_ai_app/sql/: supabase_rpc.sql
src/chronic_ai_app/tools/: handoff.py  rag_retrieve.py  record_assessment.py  record_recommendations.py  sql_tools.py  weekly_metrics.py
